user-apps/miscellaneous/fireflyiii/core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fireflyiii
  labels:
    app: fireflyiii
    tier: core
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fireflyiii
      tier: core
  template:
    metadata:
      labels:
        app: fireflyiii
        tier: core
        # Added for Cilium network policies
        netpol.cilium.io/egress-to-kube-dns: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
        netpol.cilium.io/ingress-from-intra: "true"
    spec:
      priorityClassName: application-critical
      containers:
      - image: fireflyiii/core:version-6.7.4
        name: fireflyiii
        ports:
        - containerPort: 8080
          name: fireflyiii
        volumeMounts:
        - mountPath: "/var/www/html/storage/upload"
          name: fireflyiii-upload
      volumes:
        - name: fireflyiii-upload
          persistentVolumeClaim:
            claimName: fireflyiii-upload
