user-apps/miscellaneous/fireflyiii/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fireflyiii
  labels:
    app: fireflyiii
    tier: core 
spec:
  clusterIP: None
  ports:
    - port: 8080
  selector:
    app: fireflyiii
    tier: core
