user-apps/miscellaneous/fireflyiii/core/cilium-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: firefly-core-netpol
spec:
  description: >
    Allow Firefly III core pods to egress to the CloudNativePG
    database services (rw, ro, r).
    Allow Firefly III core pods to egress to Redis instances in the namespace.
  endpointSelector:
    matchLabels:
      app: fireflyiii
      tier: core

  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: cloudnative-pg
            cnpg.io/cluster: fireflyiii-database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": fireflyiii
          matchExpressions:
            - key: redis_setup_type
              operator: Exists
            - key: role
              operator: Exists
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
